Bug 91843 - SIDEBAR: White borders appearing around slide layouts
Summary: SIDEBAR: White borders appearing around slide layouts
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha0+ Master
Hardware: Other Linux (All)
: lowest trivial
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.4.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: RenderContext Sidebar-Properties-Layouts
  Show dependency treegraph
 
Reported: 2015-06-03 22:26 UTC by Yousuf Philips (jay) (retired)
Modified: 2019-08-28 07:02 UTC (History)
10 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
screenshot (14.93 KB, image/png)
2015-06-03 22:26 UTC, Yousuf Philips (jay) (retired)
Details
screenshot from 5.0 (93.99 KB, image/png)
2015-06-07 09:17 UTC, Yousuf Philips (jay) (retired)
Details
Sidebar with dark theme (13.96 KB, image/png)
2015-06-07 09:29 UTC, Heiko Tietze
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2015-06-03 22:26:13 UTC
Created attachment 116266 [details]
screenshot

Steps:
1) Open Impress
2) Look at slide layouts in properties tab of sidebar

Regression as this isnt in 4.4 daily.

Version: 5.1.0.0.alpha1+
Build ID: e61fcfea5c2a306e44a053976e921160e78917ac
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2015-06-01_01:59:07
Comment 1 A (Andy) 2015-06-06 21:33:50 UTC
In the current release 4.4.3.2 (Win 8.1) not reproducible.
Comment 2 Yousuf Philips (jay) (retired) 2015-06-07 01:21:48 UTC
Hey Andy, as stated in my description, this doesnt affect 4.4. :D

You can grab a 5.0 as the beta is out.
http://downloadarchive.documentfoundation.org/libreoffice/old/5.0.0.0.beta1/win/
Comment 3 A (Andy) 2015-06-07 07:28:26 UTC
(In reply to Yousuf (Jay) Philips from comment #2)
> Hey Andy, as stated in my description, this doesnt affect 4.4. :D
> 
> You can grab a 5.0 as the beta is out.
> http://downloadarchive.documentfoundation.org/libreoffice/old/5.0.0.0.beta1/
> win/

Hi Jay, of course you are right, it was just to confirm it 

This bug is for me also not reproducible with LO 5.0.0.0.beta1.  Maybe this is only an issue in 5.1?
Comment 4 raal 2015-06-07 07:32:22 UTC
I can not confirm with Version: 5.1.0.0.alpha1+
Build ID: eb8c323d94bf13d4a373f88c6b932a97701c283b
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2015-06-05_00:59:00
Comment 5 Yousuf Philips (jay) (retired) 2015-06-07 09:17:37 UTC
Created attachment 116344 [details]
screenshot from 5.0

I checked on windows and this didnt show up there, and i have an old 2015-04-27 @46 of 5.0 and it doesnt show up there, but in current 5.0 it happens. So this regression happened before 5.0 was branched and within the last month.

Version: 5.0.0.0.beta1+
Build ID: a19fda7a73491b41dc300345a03231180b7c894d
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:libreoffice-5-0, Time: 2015-06-07_01:01:42
Comment 6 Yousuf Philips (jay) (retired) 2015-06-07 09:21:01 UTC
@Philippe: You sent me screenshots yesterday in the mockup and this bug was present in those screenshots, so can you confirm this.
Comment 7 Heiko Tietze 2015-06-07 09:29:30 UTC
Created attachment 116345 [details]
Sidebar with dark theme
Comment 8 tommy27 2015-06-07 11:40:04 UTC
not reproducible under Win8.1 x64 using LibO 5.1.0.0.alpha1+
Build ID: 8d46bc15e93687f93d7c85064acc71231e2f08b1
TinderBox: Win-x86@39, Branch:master, Time: 2015-06-02_05:16:07
Locale: en-US (it_IT)
Comment 9 Yousuf Philips (jay) (retired) 2015-06-07 12:57:03 UTC
As previously stated, i believe this is linux only.
Comment 10 Philippe Jung 2015-06-07 15:29:07 UTC
Yep confirmed on linux
Comment 11 Matthew Francis 2015-08-13 05:02:15 UTC
This seems to have begun at the below commit.
Adding Cc: to quikee@gmail.com; Could you possibly take a look at this one? Thanks

commit e5bb5c52aeaeb60c8592b004efd88c30242e03a1
Author: Tomaž Vajngerl <tomaz.vajngerl@collabora.co.uk>
Date:   Mon May 18 11:20:48 2015 +0900

    add RenderContext to Window::PushPaintHelper, use Erase correctly
    
    Change-Id: Icc684a2dcfb4d92752b09768e5a908636910f302
Comment 12 Robinson Tryon (qubit) 2015-12-13 11:13:27 UTC Comment hidden (obsolete)
Comment 13 Yousuf Philips (jay) (retired) 2016-02-22 16:05:27 UTC
Noticed this bug again when i was watching an Impress video tutorial.
Comment 14 Yousuf Philips (jay) (retired) 2016-09-25 20:44:57 UTC
Checked with Tomaz today on irc and he said :-

<quikee> ValueSet is a PITA to deal with.. I hope to find time to rewrite it and add it into vcl
<jphilipz> was assuming it was a wrong fill color being used on it
<quikee> probably not.. all our widgets need heavy refactoring because the lifecycle when to apply background and stuff is almost random..
<quikee> most of the fixes of rendercontext refactoring were - "well apply backgrounds and fonts again at this place so it works again" fixing the bug but not curing the disease

@Maxim: Any thoughts?
Comment 15 Xisco Faulí 2016-09-26 15:09:43 UTC
Adding Cc: to Tomaž Vajngerl
Comment 16 QA Administrators 2019-03-02 03:52:03 UTC Comment hidden (obsolete)
Comment 17 Xisco Faulí 2019-06-14 09:46:06 UTC
Still reproducible in

Version: 6.4.0.0.alpha0+
Build ID: af37bb23f63b209af1193e20177c3aacbd777543
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 18 Miklos Vajna 2019-08-27 12:41:57 UTC
I can reproduce this. It's somewhat similar to bug 92079, but that was about a bitmap background, while here the background is a solid color.
Comment 19 Commit Notification 2019-08-27 18:17:46 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/a5cafe5d7e87c0f5ecdcffbbe58c66abcb97ac8e%5E%21

tdf#91843 sd sidebar: fix unexpected borders around the slide layout previews

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.