tdf#91843 sd sidebar: fix unexpected borders around the slide layout previews

Regression from commit e5bb5c52aeaeb60c8592b004efd88c30242e03a1 (add
RenderContext to Window::PushPaintHelper, use Erase correctly,
2015-05-18), the problem was similar to tdf#92079, except here the
missing background was a solid color, not a bitmap.

(cherry picked from commit a5cafe5d7e87c0f5ecdcffbbe58c66abcb97ac8e)

Change-Id: I2221b3eabed84cf039cb8c3881442c9e23c6ec13